SDL2_gfx ChangeLog

Sun, Nov 03, 2013 10:11:16 AM
- updated testgfx program for benchmarking primitive rendering performance
- updated test programs based on VS warnings
- fixed VS2012 solution for Release build
 
Mon, Oct 28, 2013  8:00:05 AM
- bugfix to _aaline special cases
- added image filter functions
- added to documentation
- updated readme and changelog
- updated solutions for VS2010 and VS2012

Tue, Sep 04, 2012  8:27:44 AM
- initial release of development version (partially finished)